Reorganized entire html and css files for better visibility and readability. This also helped me to removed repeated code which sometimes causes bugs

--- a/Source/index.css
+++ b/Source/index.css
@@ -2,20 +2,12 @@ body {
   background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/078/original/mirror.svg.jpg?1705589062");
   background-size: cover;
   background-position: center;
-  background-repeat: no repeat;
+  background-repeat: no-repeat;
   margin: 25px;
   padding: 25px;
   border-radius: 5px;
   font-family: "Asap Condensed", sans-serif;
   font-weight: 900;
-}
-
-footer {
-  font-size: 12px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  text-align: center;
-  color: rgba(20, 18, 29, 0.4);
-  padding: 10px -5px;
 }
 
 .weather-app {
@@ -40,7 +32,7 @@ form {
   justify-content: space-around;
 }
 
-.city-text {
+.city-search {
   font-size: 14px;
   border-radius: 5px;
   padding: 15px 20px;
@@ -65,23 +57,33 @@ form {
   transition: all 200ms ease-in-out;
 }
 
-.city {
-  font-size: 46px;
-  font-weight: 1200;
-  margin: 30px 0;
+h1 {
+  display: flex;
+  margin-left: 10px;
 }
-
-strong {
-  color: rgba(121, 2, 2, 0.966);
-  text-decoration: solid;
-  font-weight: 700;
+.city {
+  margin: 0;
+  font-size: 52px;
+  line-height: 48px;
 }
 
 .weather-app-conditions {
   font-size: 16px;
   line-height: 24px;
-  font-weight: 900;
   color: rgba(0, 0, 0, 0.6);
+}
+
+strong {
+  color: rgba(121, 2, 2, 0.966);
+}
+
+.weather-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.city-details {
+  display: flex;
 }
 
 .material-symbols-outlined {
@@ -102,11 +104,10 @@ strong {
   margin-top: 25px;
 }
 
-h1 {
-  display: flex;
-  margin-left: 10px;
-}
-
-.weather-container {
-  display: block;
+footer {
+  font-size: 12px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-align: center;
+  color: rgba(20, 18, 29, 0.4);
+  padding: 10px -5px;
 }
